<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.starhood.musicapp.MainActivity">

    <TextView
        style="@style/dis_textViews"
        android:text="@string/main_activity_description_TV" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/pd6">

        <RelativeLayout
            android:id="@+id/RLallsongs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pd6">

            <ImageView
                android:id="@+id/playpic"
                android:layout_width="@dimen/picsdim100"
                android:layout_height="@dimen/picsdim100"
                android:src="@drawable/songs" />

            <TextView
                style="@style/startbuttons"
                android:layout_toRightOf="@id/playpic"
                android:text="@string/all_songs" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RLartist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pd6">

            <ImageView
                android:id="@+id/artist"
                android:layout_width="@dimen/picsdim100"
                android:layout_height="@dimen/picsdim100"
                android:src="@drawable/artist" />

            <TextView
                style="@style/startbuttons"
                android:layout_toRightOf="@id/artist"
                android:text="@string/artist" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RLalbums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pd6">

            <ImageView
                android:id="@+id/albums"
                android:layout_width="@dimen/picsdim100"
                android:layout_height="@dimen/picsdim100"
                android:src="@drawable/albums" />

            <TextView
                style="@style/startbuttons"
                android:layout_toRightOf="@id/albums"
                android:text="@string/albums" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RLradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pd6">

            <ImageView
                android:id="@+id/radio"
                android:layout_width="@dimen/picsdim100"
                android:layout_height="@dimen/picsdim100"
                android:src="@drawable/signal" />

            <TextView
                style="@style/startbuttons"
                android:layout_toRightOf="@id/radio"
                android:text="@string/radio" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>


</LinearLayout>
